<resources>
    <string name="app_name">Aplikasi Dicoding Event</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upcoming">Upcoming</string>
    <string name="finished">Finished</string>
    <string name="see_details">See Detail Event</string>
    <string name="event_image">Event Image</string>
    <string name="key_selected_event">selected_event</string>
    <string name="title_events">Title of Event</string>
    <string name="description_events">Description Event</string>
    <string name="place_events">Lokasi: %s</string>
    <string name="date_events">Tanggal: %s</string>
    <string name="quota_event">Sisa Kuota: %d</string>
    <string name="owner_event">Penyelenggara: %s</string>
    <string name="time_event">Waktu: %1$s</string>
    <string name="home">Home</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="finished_events">Finished Events</string>
    <string name="event_name">Event Name</string>
    <string name="searchbar_hint">Search</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="summary_events">Summary of Event</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enable_dark_mode">Enable dark mode</string>
</resources>