<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.event.EventDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="75dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivEventImage"
                android:layout_width="match_parent"
                android:layout_height="375dp"
                android:contentDescription="@string/event_image"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
                android:contentDescription="@string/favorite_button"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_favorite_24" />
        </FrameLayout>


        <TextView
            android:id="@+id/tvEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/ivEventImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="24dp"
            tools:text="@string/title_events"/>

        <TextView
            android:id="@+id/tvEventSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/ivEventImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="16dp"
            tools:text="@string/summary_events"/>

        <TextView
            android:id="@+id/tvEventOwner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvEventName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="26dp"
            android:paddingEnd="16dp"
            tools:text="@string/owner_event"/>

        <TextView
            android:id="@+id/tvEventCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvEventName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="26dp"
            android:paddingEnd="16dp"
            tools:text="@string/place_events"/>

        <TextView
            android:id="@+id/tvEventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvEventCity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="26dp"
            android:paddingEnd="16dp"
            tools:text="@string/date_events"/>

        <TextView
            android:id="@+id/tvEventTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvEventDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="26dp"
            android:paddingEnd="16dp"
            tools:text="@string/time_event"/>

        <TextView
            android:id="@+id/tvEventQuota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvEventTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="26dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="16dp"
            tools:text="@string/quota_event"/>

        <TextView
            android:id="@+id/tvEventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingStart="26dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEventDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/description_events"/>

        <Button
            android:id="@+id/btnSeeDetails"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/see_details"
            android:padding="16dp"/>

    </LinearLayout>

</ScrollView>